@@ -1,5 +1,9 @@
 2017-02-17  Jason Merrill  <jason@redhat.com>
 
+	PR c++/79508 - lookup error with member template
+	* parser.c (cp_parser_template_name): Clear
+	parser->context->object_type if we aren't doing lookup.
+
 	PR c++/78690 - ICE with using and global type with same name
 	* pt.c (type_dependent_object_expression_p): True for
 	IDENTIFIER_NODE.
